fix main block alignement

--- a/src/styles/_utils.css
+++ b/src/styles/_utils.css
@@ -44,6 +44,10 @@
   margin-right: auto;
 }
 
+.full-height {
+  height: 100%;
+}
+
 .backdrop {
   align-items: center;
   background-color: var(--color-shade, rgba(0, 0, 0, .4));
